Update Readme, Update pom.xml, Add better GUI

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,27 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.version}</version>
+
+                <executions>
+                    <execution>
+                        <configuration>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+
                 <configuration>
+
+                    <!-- Additional configuration. -->
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
